--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -26,3 +26,5 @@ jobs:
 
       - name: Pulumi preview
         run: pulumi preview
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_TOKEN }}
