--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Pulumi preview
         run: pulumi preview
         env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_TOKEN }}
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
