--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -3,11 +3,11 @@ name: Pulumi Workflow
 on:
   push:
     branches:
-      - master  # Modify this if you want the workflow to trigger on a different branch
+      - master
 
 jobs:
   pulumi:
-    runs-on: ubuntu-latest  # You can choose a different operating system if needed
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
@@ -16,15 +16,17 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'  # Modify this if you require a different Node.js version
+          node-version: '14'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Log Pulumi version
-        run: pulumi version
+      - name: Log into Pulumi
+        run: pulumi login
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_TOKEN }}
 
       - name: Pulumi preview
         run: pulumi preview
         env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_TOKEN }}
