--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -25,6 +25,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-region: ${{ secrets.AWS_REGION }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          audience: sts.amazonaws.com
+        env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+
 
       - name: Install dependencies
         run: npm install
