--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: pulumi/actions@v3
         with:
           command: preview
-          stack-name:  ws-1/sampl
+          stack-name:  durgaprasad9/ws-1/sampl
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
