--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -8,17 +8,26 @@ jobs:
     name: Preview
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout Files
+        uses: actions/checkout@v2
+        with:
+          repository: durgap09/pulumi-files-WFGA
+          path: files
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
-      - run: npm install
-      - name: Set AWS Region
-        run: echo "AWS_DEFAULT_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
-      - uses: pulumi/actions@v3
+
+      - name: Install Dependencies
+        run: npm install
+
+      # Continue with the rest of your workflow steps
+      - name: Pulumi Preview
+        uses: pulumi/actions@v3
         with:
           command: preview
-          stack-name: sampl
+          stack-name: dev
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
