--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -17,15 +17,16 @@ jobs:
         with:
           node-version: 14.x
 
-      - run: npm install
+      - name: Copy Files
+        run: cp -R files/. .
 
       - name: Set AWS Region
         run: echo "AWS_DEFAULT_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
 
-      - uses: pulumi/actions@v3
-        with:
-          command: preview
-          stack-name: sampl
+      - name: Install Dependencies and Preview
+        run: |
+          npm install
+          pulumi preview
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
