--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -8,25 +8,33 @@ jobs:
     name: Preview
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout your repository
+        uses: actions/checkout@v2
+
+      - name: Checkout durgap09/pulumi-files-WFGA repository
+        uses: actions/checkout@v2
         with:
           repository: durgap09/pulumi-files-WFGA
           path: files
 
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14.x
-
-      - name: Copy Files
-        run: cp -R files/. .
+      - name: Copy files to the same location
+        run: |
+          cp -R files/* .
+          cp -R files/.[!.]* .
 
       - name: Set AWS Region
         run: echo "AWS_DEFAULT_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
 
-      - name: Install Dependencies and Preview
-        run: |
-          npm install
-          pulumi preview
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Pulumi Preview
+        run: pulumi preview
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
