--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -8,6 +8,9 @@ jobs:
     name: Preview
     runs-on: ubuntu-latest
     steps:
+      - name: Create temporary folder
+        run: mkdir temp
+
       - name: Checkout your repository
         uses: actions/checkout@v2
 
@@ -15,12 +18,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: durgap09/pulumi-files-WFGA
-          path: files
-
-      - name: Copy files to the same location
-        run: |
-          cp -R files/* .
-          cp -R files/.[!.]* .
+          path: temp
 
       - name: Set AWS Region
         run: echo "AWS_DEFAULT_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
@@ -29,6 +27,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
+
+      - name: Change working directory to temp
+        run: cd temp
 
       - name: Install Dependencies
         run: npm install
