--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout your repository
         uses: actions/checkout@v2
 
+      - name: Copy files to temporary folder
+        run: cp -R . temp/
+
       - name: Checkout durgap09/pulumi-files-WFGA repository
         uses: actions/checkout@v2
         with:
