--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Select Pulumi Stack
+        run: pulumi stack select dev
+
       - name: Pulumi Preview
         run: pulumi preview
         env:
