--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -37,13 +37,15 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Set Pulumi Access Token
+        run: pulumi login --access-token ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
       - name: Select Pulumi Stack
-        run: pulumi stack select dev
+        run: pulumi stack select sampl
 
       - name: Pulumi Preview
         run: pulumi preview
         env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
