--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Change working directory to temp
         run: cd temp
 
+      - name: Verify contents of temp folder
+        run: ls -l
+
       - name: Install Dependencies
         run: npm install
 
