--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+
 jobs:
   preview:
     name: Preview
@@ -22,7 +23,7 @@ jobs:
           path: temp-files
 
       - name: Copy files to temp folder
-        run: cp -R temp-files/* .
+        run: cp -R temp-files/* temp/
 
       - name: Set AWS Region
         run: echo "AWS_DEFAULT_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
