--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -38,17 +38,13 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-
-
       - name: Pulumi Preview
         uses: pulumi/actions@v3
         with:
           command: preview
-          stack-name: dev
+          stack-name: sampl
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-      
-        
